<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfirmActivity">

    <ScrollView
        android:id="@+id/scrollyear"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
        <LinearLayout
            android:orientation="vertical"
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="24dp" >

                <ImageView
                    android:id="@+id/ivImage"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textSize="16dp"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginBottom="8dp"/>
                <TextView
                    android:id="@+id/tvAuthor"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View android:id="@+id/tile_divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="24dp"
                    android:background="?android:attr/dividerVertical" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="¿Gracias por tu compra!"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirmationText"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnSeeBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seeBook"
                android:backgroundTint="@color/white"
                android:textColor="@color/colorAccent"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"/>
            <Button
                android:id="@+id/btnGoHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goHome"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:backgroundTint="@color/colorAccent" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>